# n8n-playground

./: .env.example  README.md  docker-compose.yaml  forex_tool.py  pyproject.toml
json/: Google Calendar Agent.json  Multi Agent Crew Webhook.json  Multi Agent Crew.json
notebooks/: 0. n8n_walkthrough.ipynb  0. test_mcp_deployment.ipynb  1. call_n8n_api.ipynb  1. ngrok_setup.ipynb  2. building_your_agents.ipynb  2. call_n8n_api.ipynb  3. call_n8n_api.ipynb  98. ngrok_setup.ipynb  99. test_mcp_deployment.ipynb  call_n8n.ipynb  ngrok_setup.ipynb
