[project]
name = "n8n-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "pyngrok>=7.2.12",
    "python-dotenv>=1.1.1",
]
